Added: Image. Initial CSS. Containers for content in index.html

--- a/index.html
+++ b/index.html
@@ -6,6 +6,98 @@
     <title>Odin Project Landing Page</title>
     <!-- CSS Link -->
     <link rel="stylesheet" href="./css/style.css" />
+
+    <!-- Google Fonts -->
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Roboto:wght@100;900&display=swap"
+      rel="stylesheet"
+    />
   </head>
-  <body></body>
+  <body>
+    <section class="hero">
+      <div class="header">
+        <!-- Logo -->
+        <h1 class="header__logo">Header Logo</h1>
+        <!-- Links -->
+        <ul class="header__links">
+          <li class="header__list">
+            <a href="" class="header__anchor">header link one</a>
+          </li>
+          <li class="header__list">
+            <a href="" class="header__anchor">header link two</a>
+          </li>
+          <li class="header__list">
+            <a href="" class="header__anchor">header link three</a>
+          </li>
+        </ul>
+      </div>
+      <div class="header__awesome">
+        <div class="awesome__col awe1">
+          <h2>This website is awesome</h2>
+          <p>
+            This website has some subtext that goes here under the main title.
+            It's a smaller font and the color is lower contrast
+          </p>
+          <button class="btnSign">Sign up</button>
+        </div>
+        <div class="awesome__col awe2">
+          <img
+            src="./img/boatSmall.JPG"
+            alt="A small boat at the beach, tethered to the shore"
+            class="awesome__img"
+          />
+        </div>
+      </div>
+    </section>
+    <section class="sections">
+      <h1 class="random__title">Some random travel website</h1>
+
+      <div class="mid-container">
+        <div class="col-mid">
+          <div class="mid-con-divs"></div>
+          <p>This is some subtext under an illustation or image</p>
+        </div>
+        <div class="col-mid">
+          <div class="mid-con-divs"></div>
+          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+        </div>
+        <div class="col-mid">
+          <div class="mid-con-divs"></div>
+          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+        </div>
+        <div class="col-mid">
+          <div class="mid-con-divs"></div>
+          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+        </div>
+      </div>
+    </section>
+    <section class="sections section-quote">
+      <div class="quote">
+        <p>
+          <em>
+            In the words of somene more infamous than me, "Go the the well and
+            it shall provide."
+          </em>
+        </p>
+        <p class="name-unknown">Name Unkown</p>
+      </div>
+    </section>
+    <section class="section__last">
+      <div class="cta">
+        <div>
+          <p class="cta__text">Call to actions! It's time!</p>
+          <p class="cta__sign">
+            Sign up for our product by clicking that button right over there!
+          </p>
+        </div>
+
+        <button class="btnSign2">Sign up</button>
+      </div>
+    </section>
+    <footer class="footer">
+      <p>Copyright &copy; The Odin Project 2021</p>
+    </footer>
+  </body>
 </html>
