Quote changed. Padding added to quote section

--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
     </section>
     <section class="sections">
       <h1 class="random__title">Some random travel website</h1>
-
+      <!-- Random Section -->
       <div class="mid-container">
         <div class="col-mid">
           <div class="mid-con-divs"></div>
@@ -73,15 +73,15 @@
         </div>
       </div>
     </section>
+    <!-- Quote Section -->
     <section class="sections section-quote">
       <div class="quote">
         <p>
           <em>
-            In the words of somene more infamous than me, "Go the the well and
-            it shall provide."
+            So he later said "Go to the well and it shall provide for eternity."
           </em>
         </p>
-        <p class="name-unknown">Name Unkown</p>
+        <p class="name-unknown">Augustus Plain</p>
       </div>
     </section>
     <section class="section__last">
@@ -96,6 +96,7 @@
         <button class="btnSign2">Sign up</button>
       </div>
     </section>
+    <!-- Footer -->
     <footer class="footer">
       <p>Copyright &copy; The Odin Project 2021</p>
     </footer>
