Random Section changed. Images added to replace placeholders. CSS adjusted for images. All titles changed to create real website environment

--- a/index.html
+++ b/index.html
@@ -19,30 +19,35 @@
     <section class="hero">
       <div class="header">
         <!-- Logo -->
-        <h1 class="header__logo">Header Logo</h1>
+        <h1 class="header__logo">Travel Gatherings</h1>
         <!-- Links -->
         <ul class="header__links">
           <li class="header__list">
-            <a href="" class="header__anchor">header link one</a>
+            <a href="#" class="header__anchor">Home</a>
           </li>
           <li class="header__list">
-            <a href="" class="header__anchor">header link two</a>
+            <a href="#" class="header__anchor">About Us</a>
           </li>
           <li class="header__list">
-            <a href="" class="header__anchor">header link three</a>
+            <a href="#" class="header__anchor">Contact</a>
+          </li>
+          <li class="header__list">
+            <a href="#" class="header__anchor">Gallery</a>
           </li>
         </ul>
       </div>
+
+      <!-- Awesome Text -->
       <div class="header__awesome">
-        <div class="awesome__col awe1">
-          <h2>This website is awesome</h2>
+        <div class="awesome__col awesome-1">
+          <h2>Traveling the world is touching adventure</h2>
           <p>
-            This website has some subtext that goes here under the main title.
-            It's a smaller font and the color is lower contrast
+            Join us on a journey to the ends of the earth and see all the
+            wonders of the world.
           </p>
           <button class="btnSign">Sign up</button>
         </div>
-        <div class="awesome__col awe2">
+        <div class="awesome__col awesome-2">
           <img
             src="./img/boatSmall.JPG"
             alt="A small boat at the beach, tethered to the shore"
@@ -51,25 +56,66 @@
         </div>
       </div>
     </section>
+
+    <!-- Random Section -->
     <section class="sections">
-      <h1 class="random__title">Some random travel website</h1>
-      <!-- Random Section -->
-      <div class="mid-container">
-        <div class="col-mid">
-          <div class="mid-con-divs"></div>
-          <p>This is some subtext under an illustation or image</p>
+      <h1 class="random__title">Travel the globe with us</h1>
+      <div class="box-container">
+        <div class="box-col">
+          <div class="box">
+            <img
+              src="./img/armenia.jpeg"
+              alt="Persperating cup on a beach in Portugal"
+              class="porto__img"
+            />
+          </div>
+
+          <p>
+            <span class="city"> Armenia, Colombia </span><br />Central west
+            coffee region.
+          </p>
         </div>
-        <div class="col-mid">
-          <div class="mid-con-divs"></div>
-          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+        <div class="box-col">
+          <div class="box">
+            <img
+              src="./img/porto.jpeg"
+              alt="Persperating cup on a beach in Portugal"
+              class="porto__img"
+            />
+          </div>
+          <p>
+            <span class="city"> Porto, Portugal </span>
+            <br />
+            The northeast coast.
+          </p>
         </div>
-        <div class="col-mid">
-          <div class="mid-con-divs"></div>
-          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+        <div class="box-col">
+          <div class="box">
+            <img
+              src="./img/halle.jpeg"
+              alt="Buildings on an old street"
+              class="porto__img"
+            />
+          </div>
+
+          <p>
+            <span class="city">Halle, Germany</span> <br />The northeastern
+            region.
+          </p>
         </div>
-        <div class="col-mid">
-          <div class="mid-con-divs"></div>
-          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+        <div class="box-col">
+          <div class="box">
+            <img
+              src="./img/hobo_umb.jpeg"
+              alt="A restaurant patio with benches and umbrellas"
+              class="porto__img"
+            />
+          </div>
+
+          <p>
+            <span class="city">Hoboken, New Jersey</span> <br />Northeastern
+            United States
+          </p>
         </div>
       </div>
     </section>
@@ -77,9 +123,7 @@
     <section class="sections section-quote">
       <div class="quote">
         <p>
-          <em>
-            So he later said "Go to the well and it shall provide for eternity."
-          </em>
+          <em> World travel is food for the mind. </em>
         </p>
         <p class="name-unknown">Augustus Plain</p>
       </div>
@@ -87,9 +131,9 @@
     <section class="section__last">
       <div class="cta">
         <div>
-          <p class="cta__text">Call to actions! It's time!</p>
+          <p class="cta__text">Travel the world! It's a calling!</p>
           <p class="cta__sign">
-            Sign up for our product by clicking that button right over there!
+            Join Travel Gatherings and we'll take you there!
           </p>
         </div>
 
