Padding added to center images in Random section

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <!-- CSS Link -->
     <link rel="stylesheet" href="./css/style.css" />
 
-    <!-- Google Fonts -->
+    <!-- Google Fonts Link -->
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
@@ -37,7 +37,7 @@
         </ul>
       </div>
 
-      <!-- Awesome Text -->
+      <!-- Hero Awesome Text -->
       <div class="header__awesome">
         <div class="awesome__col awesome-1">
           <h2>Traveling the world is touching adventure</h2>
